--- a/Styles.CSS
+++ b/Styles.CSS
@@ -140,7 +140,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
   padding: 20px 0;
 }
 
